# efmob_test

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  apps.py  authentication.py  exceptions.py  models.py  permissions.py  schema_extensions.py  schemas.py  serializers.py  tests.py  tokens.py  urls.py  views.py
users/management/commands/: csu.py  load_mock_data.py  start.py
users/management/data/: access_role_rules.csv  business_elements.csv  demo_items.csv  demo_users.csv  roles.csv
users/migrations/: 0001_initial.py  0002_refreshtoken_revokedaccesstoken.py  0003_alter_accessrolerule_options_and_more.py
